Import of SMUELLER/SOOT-0.17 from CPAN.
gitpan-cpan-distribution: SOOT
gitpan-cpan-version:      0.17
gitpan-cpan-path:         SMUELLER/SOOT-0.17.tar.gz
gitpan-cpan-author:       SMUELLER
gitpan-cpan-maturity:     released

--- a/lib/SOOT/Examples/Geometry.pod
+++ b/lib/SOOT/Examples/Geometry.pod
@@ -37,7 +37,7 @@ This is a listing of all SOOT examples for Geometry.
   $geom->SetTopVolume($top);
   
   # Make the elementary assembly of the whole structure
-  my $tplate = TGeoVolumeAssembly->new("TOOTHPLATE");
+  my $tplate = TGeoVolumeAssembly->new("TOOTHPLATE"); # FIXME This segfaults!?
   
   my $ntooth = 5;
   my $xplate = 25.0;
